--- a/FinalExamProject/pom.xml
+++ b/FinalExamProject/pom.xml
@@ -1,10 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>cisc181.edu</groupId>
-  <artifactId>FinalExamProject</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  	<build>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>cisc181.edu</groupId>
+	<artifactId>FinalExamProject</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -29,12 +31,12 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	
-	
-	
-	
-	
+
+
+
+
+
+
 	<properties>
 
 		<!-- Generic properties -->
@@ -124,6 +126,6 @@
 			<version>1.0.0.GA</version>
 		</dependency>
 	</dependencies>
-	
-	
+
+
 </project>
